--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -8,7 +8,10 @@
 @media (max-width: 1200px) {
   .categories-info,
   .video-fashion,
-  .product {
+  .product,
+  .blogpage,
+  .contacts__inner,
+  .shop{
     padding: 60px 0;
   }
   .title {
@@ -114,6 +117,143 @@
     padding-bottom: 60px;
     &__item-info{
       flex-direction: column;
+    }
+  }
+  .blogpage{
+    &__inner{
+      flex-direction: column-reverse;
+      align-items: center;
+    }
+    &__content-item:not(:last-of-type){
+      margin-bottom: 30px;
+    }
+    &__content-textbox{
+      padding: 24px 24px;
+    }
+    &__content-title{
+      margin-bottom: 10px;
+    }
+    &__item-info{
+      gap: 10px;
+      margin-bottom: 10px;
+    }
+    .filter-popular,
+    .filter-category {
+      display: none;
+    }
+    .filter-search{
+      padding: 15px;
+      margin-bottom: 0;
+    }
+    .filter-search__input{
+      width: 100%;
+    }
+    .filter-search__title{
+      display: none;
+    }
+    .blogfilter{
+      max-width: 770px;
+    }
+  }
+  .blogfilter__post,
+  .blogfilter__portfolio{
+    display: none;
+  }
+  .blogpage__item-info{
+    flex-direction: row;
+    gap: 15px;
+    justify-content: space-between;
+  }
+  .blogpost__infobox{
+    padding: 25px;
+    h3{
+      margin-bottom: 14px;
+    }
+    p:not(:last-of-type){
+      margin-bottom: 15px;
+    }
+    blockquote{
+      padding: 15px 20px;
+      font-size: 20px;
+      margin-bottom: 15px;
+    }
+  }
+  .blogpost__info-item{
+    margin-bottom: 15px;
+  }
+  .blogpost__infobox-img{
+    margin: 15px 15px 25px 0;
+  }
+  .contacts iframe{
+    margin-bottom: 60px;
+  }
+  .modal{
+    padding-top: 60px;
+    margin-bottom: 60px;
+  }
+  .shop-content__inner{
+    gap: 30px;
+    justify-content: center;
+  }
+  .shop{
+    .filter__item{
+      padding: 15px;
+      margin-bottom: 30px;
+    }
+  }
+  .shop-content__filter{
+    padding: 15px;
+  }
+  .shop__inner {
+    position: relative;
+  }
+  .shop__filters-btn{
+    display: block;
+  }
+  .shop-content__filter-buttons {
+    margin-right: auto;
+  }
+  .shop__filters {
+    position: absolute;
+    z-index: 1000;
+    top: 71px;
+    left: 0;
+    transform: translateX(-200%);
+    transition: all .3s;
+  }
+  .shop .filter__item {
+    background-color: #fff;
+    margin-bottom: 0;
+
+    &:not(:last-of-type) {
+      border-bottom: transparent;
+    }
+  }
+
+  .filter.filters--active {
+    transform: translateX(0%);
+  }
+  .product-page{
+    padding: 60px 0 30px;
+  }
+  .product-tabs{
+    padding-top: 30px;
+  }
+  .related {
+    padding: 30px 0 60px;
+    &__items{
+      justify-content: center;
+    }
+    &__title{
+      font-size: 36px;
+    }
+  }
+  .product-slide__thumb{
+    display: none;
+  }
+  .product-one{
+    &__slide{
+      width: auto;
     }
   }
 }
@@ -224,6 +364,73 @@
   }
   .blog__item-box{
     padding: 10px 15px;
+  }
+  .top__container{
+    margin-top: 30px;
+    background-image: none !important;
+    background-color: $bg;
+    padding: 60px 0;
+  }
+  .blogpage{
+    padding: 30px 0;
+  }
+  .blogpage__content-slider{
+    height: 40%;
+  }
+  .blogpage__content-popup{
+    height: 360px;
+  }
+  .contacts{
+    &__content{
+      flex-direction: column;
+    }
+    &__contact{
+      max-width: 100%;
+    }
+    &__contact-title{
+      margin-bottom: 15px;
+    }
+    &__contact-text{
+      margin-bottom: 30px;
+    }
+    &__link-box:not(:last-of-type) {
+      margin-bottom: 15px;
+    }
+  }
+  .contacts iframe {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    height: 300px;
+  }
+  .product-one{
+    &__inner{
+      flex-direction: column;
+      align-items: center;
+      gap: 40px;
+    }
+    &__content {
+      width: 100%;
+    }
+    &__slide{
+      margin-right: 0;
+    }
+  }
+  .product-slide__big{
+    width: 450px;
+  }
+  .related__items{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .product-slide{
+    &__big{
+      img{
+        height: 450px;
+        width: 550px;
+        object-position: top center;
+      }
+    }
   }
 }
 
@@ -382,7 +589,70 @@
       margin-bottom: 25px;
     }
   }
-  
+  .blogpage__content-title{
+    text-align: center;
+  }
+  .slick-prev.slick-arrow {
+    left: 15px;
+  }
+  .slick-next.slick-arrow {
+    right: 15px;
+  }
+  .blogpage__popup-link {
+    height: 60px;
+    width: 60px;
+  }
+  .blogpost__infobox-img{
+    display: none;
+  }
+  .blogpost__info-items{
+    justify-content: space-between;
+    gap: 10px;
+  }
+  .blogpost__info-item{
+    padding-left: 20px;
+  }
+  .blogpost__infobox{
+    h3{
+      text-align: center;
+    }
+  }
+  .blogpost-author__name{
+    padding-top: 5px;
+    margin-bottom: 5px;
+  }
+  .blogpost-author__photo{
+    display: none;
+  }
+  .contacts__form{
+    padding: 30px;
+  }
+  .contacts__input-top{
+    flex-direction: column;
+    margin-bottom: 30px;
+  }
+  .contacts__top-input{
+    margin-bottom: 0;
+  }
+  .contacts__form-btn{
+    padding: 16px 20px 14px;
+  }
+  .shop-content__filter-btn.button-list,
+  .product-item.product-item--list,
+  .shop-content__filter-buttons{
+    display: none;
+  }
+  .product-tabs__top-item {
+    margin-bottom: 10px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .product-tabs__top-item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .comments-form__rating{
+    display: none;
+  }
 }
 
 @media (max-width: 475px){
@@ -462,5 +732,111 @@
     &__link{
       margin-top: 30px;
     }
-  } 
+  }
+  .blogpage__item-info {
+    flex-direction: column;
+    gap: 15px;
+  }
+  .blogpage__content-popup {
+    height: 240px;
+  }
+  .blogpost__infobox{
+    padding: 10px 15px 10px;
+    margin-bottom: 15px;
+  }
+  .blogpost__info-items,
+  .blogpost-author__social{
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-bottom: 15px;
+    gap: 15px;
+  }
+  .blogpost__info-item {
+    margin-bottom: 0;
+  }
+  .comments__img{
+    display: none;
+  }
+  .comments-form__textarea{
+    height: 175px;
+    margin-bottom: 30px;
+  }
+  .comments-form__btn{
+    padding: 18px 26px 16px;
+  }
+  .comments-form{
+    padding: 30px 0;
+  }
+  .shop-content__filter-show{
+    display: none;
+  }
+  .pagination{
+    padding: 10px 0;
+    &__list{
+      padding: 0px 10px;
+    }
+    &__item{
+      padding: 0 5px;
+    }
+    &__prev{
+      padding-left: 10px;
+    }
+    &__next{
+      padding-right: 10px;
+    }
+  }
+  .product-slide__big{
+    height: 300px;
+    width: 300px;
+    margin: 0 auto;
+    img{
+      height: 300px;
+      width: 300px;
+    }
+  }
+  .related{
+    display: none;
+  }
+  .comments-form{
+    border-bottom: none;
+    padding-bottom: 0;
+  }
+  .product-filter__color{
+    margin-bottom: 15px;
+  }
+  .product-filter__size{
+    margin-bottom: 10px;
+  }
+  .product-filter__size-checkbox {
+    margin-bottom: 10px;
+  }
+  .product-one__item-btn{
+    padding: 16px 25px;
+  }
+  .product-tabs__top{
+    border: none;
+  }
+  .comments__content-top{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .comments__content-star{
+    margin: 0;
+    margin-top: 5px;
+    padding: 0;
+  }
+  .comments__content-date{
+    padding: 0;
+    &::after{
+      display: none;
+    }
+  }
+  .comments-form__box-input{
+    flex-direction: column;
+    gap: 15px;
+    margin-bottom: 15px;
+  }
+  .comments-form__textarea{
+    margin-bottom: 15px;
+  }
 }
