--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -516,6 +516,7 @@
     margin-bottom: 55px;
   }
   &__link{
+    background-color: #fff;
     text-transform: uppercase;
     color: $title;
     display: inline-block;
@@ -984,6 +985,15 @@
   }
   &__filters{
     width: 370px;
+    margin-right: 30px;
+  }
+  &__filters-btn{
+    display: none;
+    padding: 3px;
+    width: 40px;
+    height: 40px;
+    background-color: $accent;
+    border: none;
     margin-right: 30px;
   }
 }
@@ -2142,6 +2152,7 @@
     font-size: 48px;
     line-height: 1.2;
     margin-bottom: 30px;
+    text-align: start;
   }
   &__contact-text{
     margin-bottom: 60px;
